// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facility List less than max 1`] = `
.c1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1 .ant-card-actions {
  margin-top: auto;
}

.c2 {
  width: auto;
  height: auto;
}

.c0 {
  margin-top: 32px;
}

<div>
  <div
    class="c0"
  >
    <h4
      class="ant-typography css-dev-only-do-not-override-diro6f"
    >
      Facilities
    </h4>
    <div
      class="ant-row css-dev-only-do-not-override-diro6f"
      style="margin-left: -8px; margin-right: -8px;"
    >
      <div
        class="ant-col ant-col-md-6 css-dev-only-do-not-override-diro6f"
        style="padding-left: 8px; padding-right: 8px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small c1 css-dev-only-do-not-override-diro6f"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="Venus Meeting Room"
              class="c2"
              data-nimg="1"
              decoding="async"
              height="100"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=640&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=640&q=75 2x"
              style="color: transparent;"
              width="240"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <h4
              class="ant-typography css-dev-only-do-not-override-diro6f"
            >
              Venus Meeting Room
            </h4>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              Current majority suffer hair born.
Report daughter government item keep political cut. Customer apply couple. Data happen hear must almost.
            </span>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <a
                  href="/facility/test-id"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm"
                    type="button"
                  >
                    <span
                      aria-label="eye"
                      class="anticon anticon-eye"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="eye"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                        />
                      </svg>
                    </span>
                    <span>
                      Details
                    </span>
                  </button>
                </a>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Facility List more than max 1`] = `
.c1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1 .ant-card-actions {
  margin-top: auto;
}

.c2 {
  width: auto;
  height: auto;
}

.c3 {
  text-align: right;
}

.c0 {
  margin-top: 32px;
}

<div>
  <div
    class="c0"
  >
    <h4
      class="ant-typography css-dev-only-do-not-override-diro6f"
    >
      Facilities
    </h4>
    <div
      class="ant-row css-dev-only-do-not-override-diro6f"
      style="margin-left: -8px; margin-right: -8px;"
    >
      <div
        class="ant-col ant-col-md-6 css-dev-only-do-not-override-diro6f"
        style="padding-left: 8px; padding-right: 8px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small c1 css-dev-only-do-not-override-diro6f"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="Venus Meeting Room"
              class="c2"
              data-nimg="1"
              decoding="async"
              height="100"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=640&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=640&q=75 2x"
              style="color: transparent;"
              width="240"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <h4
              class="ant-typography css-dev-only-do-not-override-diro6f"
            >
              Venus Meeting Room
            </h4>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              Current majority suffer hair born.
Report daughter government item keep political cut. Customer apply couple. Data happen hear must almost.
            </span>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <a
                  href="/facility/test-id-1"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm"
                    type="button"
                  >
                    <span
                      aria-label="eye"
                      class="anticon anticon-eye"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="eye"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                        />
                      </svg>
                    </span>
                    <span>
                      Details
                    </span>
                  </button>
                </a>
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ant-col ant-col-md-6 css-dev-only-do-not-override-diro6f"
        style="padding-left: 8px; padding-right: 8px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small c1 css-dev-only-do-not-override-diro6f"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="Venus Meeting Room"
              class="c2"
              data-nimg="1"
              decoding="async"
              height="100"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=640&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fpicsum.photos%2F400%2F200&w=640&q=75 2x"
              style="color: transparent;"
              width="240"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <h4
              class="ant-typography css-dev-only-do-not-override-diro6f"
            >
              Venus Meeting Room
            </h4>
            <span
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-diro6f"
            >
              Current majority suffer hair born.
Report daughter government item keep political cut. Customer apply couple. Data happen hear must almost.
            </span>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <a
                  href="/facility/test-id-2"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-diro6f ant-btn-text ant-btn-sm"
                    type="button"
                  >
                    <span
                      aria-label="eye"
                      class="anticon anticon-eye"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="eye"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                        />
                      </svg>
                    </span>
                    <span>
                      Details
                    </span>
                  </button>
                </a>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="c3"
    >
      <a
        data-testid="view-all"
        href="/facilities"
      >
        View all 
        <span
          aria-label="double-right"
          class="anticon anticon-double-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="double-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M533.2 492.3L277.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H188c-6.7 0-10.4 7.7-6.3 12.9L447.1 512 181.7 851.1A7.98 7.98 0 00188 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5zm304 0L581.9 166.1c-3-3.9-7.7-6.1-12.6-6.1H492c-6.7 0-10.4 7.7-6.3 12.9L751.1 512 485.7 851.1A7.98 7.98 0 00492 864h77.3c4.9 0 9.6-2.3 12.6-6.1l255.3-326.1c9.1-11.7 9.1-27.9 0-39.5z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;
